# rclone-kit

./: .aiderignore  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  _build_backend.py  pyproject.toml
.github/workflows/: ci.yml  release.yaml
docs/: code_style.md  implementation_and_build_pipeline.md  next_conversation_plan.md  production_usage.md  release_process.md  remote_oauth_authorization_plan.md
scripts/: build_distribution.py  prepare_rclone_artifact.py  smoke_test_installed_wheel.py  verify_distribution.py
src/rclone_kit/: __init__.py  access.py  backend.py  chunk_store.py  client.py  command_flags.py  completed_process.py  config.py  config_discovery.py  convert.py  diff.py  dir.py  dir_listing.py  env_file.py  exceptions.py  exec.py  file.py  file_item.py  file_part.py  file_stream.py  filelist.py  group_files.py  http_server.py  log.py  mount.py  mount_util.py  optional_dependency.py  process.py  process_tree.py  rclone_impl.py  remote.py  rpath.py  scan_missing_folders.py  settings.py  types.py  util.py
src/rclone_kit/cmd/: analyze.py  copy_large_s3.py  copy_large_s3_finish.py  install_rclone.py  list_files.py  save_to_db.py
src/rclone_kit/db/: db.py  models.py
src/rclone_kit/detail/: config_ops.py  copy_file_parts_resumable.py  listing_ops.py  mount_ops.py  serve_ops.py  transfer_ops.py  walk.py
src/rclone_kit/experimental/: flags.py  flags_base.py
src/rclone_kit/fs/: filesystem.py  walk.py  walk_threaded.py  walk_threaded_walker.py
src/rclone_kit/operations/: config_ops.py  copy_file_parts_resumable.py  listing_ops.py  mount_ops.py  transfer_ops.py  walk.py
src/rclone_kit/runtime/: __init__.py  archive_extract.py  cache_dir.py  downloader.py  exceptions.py  hashing.py  permissions.py  platform.py  rclone_binary.py
src/rclone_kit/s3/: api.py  basic_ops.py  chunk_task.py  create.py  types.py
src/rclone_kit/s3/multipart/: access.py  finished_piece.py  info_json.py  merge_state.py  upload_info.py  upload_parts_inline.py  upload_parts_resumable.py  upload_parts_server_side_merge.py  upload_state.py
tests/: helpers.py
tests/cloud/: conftest.py  test_cmd_list_files.py  test_conftest.py  test_copy.py  test_copy_bytes.py  test_copy_file_resumable_s3.py  test_copy_files.py  test_diff.py  test_fs_remote.py  test_is_synced.py  test_ls.py  test_ls_stream_files.py  test_mount.py  test_mount_s3.py  test_obscure.py  test_rclone_config.py  test_read_write_text.py  test_remote_control.py  test_remotes.py  test_s3.py  test_scan_missing_folders.py  test_serve_http.py  test_size_files.py  test_walk.py
tests/integration/: test_install.py
tests/live/: conftest.py  test_live_config.py  test_live_copy.py  test_live_delete_and_purge.py  test_live_diff_and_scan.py  test_live_http_and_fs.py  test_live_ls_and_stat.py  test_live_s3_direct.py  test_live_text_and_bytes.py  test_live_walk_and_stream.py
tests/live/gdrive/: conftest.py  test_live_gdrive_config.py  test_live_gdrive_copy.py  test_live_gdrive_delete_and_purge.py  test_live_gdrive_diff_and_scan.py  test_live_gdrive_http_and_fs.py  test_live_gdrive_ls_and_stat.py  test_live_gdrive_walk_and_stream.py
tests/live/s3/: conftest.py  test_live_s3_config.py  test_live_s3_copy.py  test_live_s3_delete_and_purge.py  test_live_s3_diff_and_scan.py  test_live_s3_direct.py  test_live_s3_http_and_fs.py  test_live_s3_ls_and_stat.py  test_live_s3_text_and_bytes.py  test_live_s3_walk_and_stream.py
tests/unit/: test_atexit_lazy_registration.py  test_backend.py  test_build_backend.py  test_build_distribution.py  test_command_security.py  test_config_discovery.py  test_config_ops.py  test_copy_file_parts_resumable.py  test_db.py  test_dir.py  test_env_file.py  test_file.py  test_file_item.py  test_file_part.py  test_finished_piece.py  test_fs.py  test_group_files.py  test_http_server_parsing.py  test_import_boundaries.py  test_listing_ops.py  test_merge_state.py  test_mount_ops.py  test_mount_util.py  test_optional_dependency.py  test_prepare_rclone_artifact.py  test_process.py  test_process_tree.py  test_rclone_contracts.py  test_rclone_facade_contract.py  test_rclone_impl_contracts.py  test_rclone_json.py  test_remote_fs_lifecycle.py  test_runtime_archive_extract.py  test_runtime_cache_dir.py  test_runtime_downloader.py  test_runtime_hashing.py  test_runtime_platform.py  test_runtime_rclone_binary.py  test_s3_upload_error_model.py  test_save_to_db_cli.py  (+12 more)
